2014-06-26 Gregory L. Lee <lee218@llnl.gov>
	* probe.cpp : initialize processCount to zero for all Probe constructors
	* backend.cpp : disable fireonce timed probes after handling
	* backend.cpp : no need to operate on relayed packet
	* STAT_BackEnd.C : look for MRNet messages before handling Dysect operations

2014-06-25 Gregory L. Lee <lee218@llnl.gov>
	* frontend.cpp : remove errant printf!
	* safe_timer.cpp : avoid overlapping probes in probesTimeoutMap with same timeout
	* : code cleanup
	* backend.cpp : send enqueued notifications when handling action

2014-06-24 Gregory L. Lee <lee218@llnl.gov>
	* backend.cpp, safe_timer.cpp, SafeTimer.h, Timer.h : clear timer for handled probe

2014-06-24 Gregory L. Lee <lee218@llnl.gov>
	* Backend.h, backend.cpp : protect probesPendingAction with a mutex

2014-06-23 Gregory L. Lee <lee218@llnl.gov>
	* probe_be.cpp, backend.cpp : disable/enable children only for processes that have triggered action

2014-06-23 Gregory L. Lee <lee218@llnl.gov>
	* : process control fixes for DysectAPI
	* : complete probe actions before enabling children and disabling self

2014-05-21 Gregory L. Lee <lee218@llnl.gov>
	* : add ability to disable build of examples
	* : build system clean up

2014-05-21 Gregory L. Lee <lee218@llnl.gov>
	scripts/script_test.py : added module offset sample test

2014-05-15 Gregory L. Lee <lee218@llnl.gov>
	* : add translate feature for module offset

2014-05-14 Gregory L. Lee <lee218@llnl.gov>
	* : enhanced node label decomposition in GUI

2014-05-13 Gregory L. Lee <lee218@llnl.gov>
	* : added module offset sample granularity

2014-04-03 Gregory L. Lee <lee218@llnl.gov>
	* : tag version 2.1.0

2014-03-31 Gregory L. Lee <lee218@llnl.gov>
	* : fixed dysectapi build system for make distcheck

2014-03-27 Gregory L. Lee <lee218@llnl.gov>
	* : updated dysectapi build system
	* : restructuring of dysectapi source

2014-03-27 Gregory L. Lee <lee218@llnl.gov>
	* : updated license info